[package]
name = "codegen_blogpost"
version = "0.1.0"
edition = "2021"

[dependencies]
los = { path = "./los" }
los2 = { path = "./los2" }
los3 = { path = "./los3" }


# [dev-dependencies]
# los = { path = "./los", features=["tests"] }

[[bin]]
name = "main0"
path = "src/main.rs"

[[bin]]
name = "main1"
path = "src/main1.rs"

[[bin]]
name = "main2"
path = "src/main2.rs"

[[bin]]
name = "main3"
path = "src/main3.rs"

[[bin]]
name = "main4"
path = "src/main4.rs"

[[bin]]
name = "main5"
path = "src/main5.rs"

[[bin]]
name = "main6"
path = "src/main6.rs"

[[bin]]
name = "main7"
path = "src/main7.rs"

[[bin]]
name = "main8"
path = "src/main8.rs"

[[bin]]
name = "main9"
path = "src/main9.rs"

[[bin]]
name = "main10"
path = "src/main10.rs"

[[bin]]
name = "main11"
path = "src/main11.rs"

[[bin]]
name = "main12"
path = "src/main12.rs"

[[bin]]
name = "main13"
path = "src/main13.rs"

[[bin]]
name = "main14"
path = "src/main14.rs"

[[bin]]
name = "main15"
path = "src/main15.rs"

[[bin]]
name = "main16"
path = "src/main16.rs"

[[bin]]
name = "main17"
path = "src/main17.rs"

[[bin]]
name = "main18"
path = "src/main18.rs"

[[bin]]
name = "main19"
path = "src/main19.rs"

[[bin]]
name = "main20"
path = "src/main20.rs"

[[bin]]
name = "main21"
path = "src/main21.rs"

[[bin]]
name = "main22"
path = "src/main22.rs"

[[bin]]
name = "main23"
path = "src/main23.rs"

[[bin]]
name = "main24"
path = "src/main24.rs"

[[bin]]
name = "main25"
path = "src/main25.rs"

[[bin]]
name = "main26"
path = "src/main26.rs"

[[bin]]
name = "main27"
path = "src/main27.rs"

[[bin]]
name = "main28"
path = "src/main28.rs"

[[bin]]
name = "main29"
path = "src/main29.rs"

[[bin]]
name = "main30"
path = "src/main30.rs"

[[bin]]
name = "main31"
path = "src/main31.rs"

[[bin]]
name = "main32"
path = "src/main32.rs"

[[bin]]
name = "main33"
path = "src/main33.rs"

[[bin]]
name = "main34"
path = "src/main34.rs"

[[bin]]
name = "main35"
path = "src/main35.rs"

[[bin]]
name = "main36"
path = "src/main36.rs"

[[bin]]
name = "main37"
path = "src/main37.rs"

[[bin]]
name = "main38"
path = "src/main38.rs"

[[bin]]
name = "main39"
path = "src/main39.rs"
